service.yml
kind: Service
apiVersion: v1
metadata:
  name: hc-feedback-pipeline
spec:
  selector:
    app: hc-feedback-pipeline
  type: LoadBalancer  # newly added line. delete if anything fails
  ports:
    - port: 8085 # Default port for image
